--- a/art/style.css
+++ b/art/style.css
@@ -21,7 +21,7 @@ a, a:visited, a:active {
     background-color: #000;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -39,7 +39,7 @@ a, a:visited, a:active {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 40;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .desc {
